[package]
name = "kite"
version = "0.1.0"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "Search engine library"
license = "Apache-2.0"

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
unicode-segmentation = "0.1.2"
chrono = "0.2"
roaring = "0.5.0"
byteorder = "0.5"
bitflags = "0.7.0"
