[package]
name = "kite"
version = "0.1.0"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "Search engine library"
license = "Apache-2.0"
keywords = ["search-engine", "search", "embedded-database", "database"]
categories = ["database-implementations", "text-processing"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicode-segmentation = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
roaring = "0.5.0"
byteorder = "0.5"
bitflags = "0.7.0"
fnv = "1.0"
