[package]
name = "kite_rocksdb"
version = "0.0.1"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]

[dependencies]
rocksdb = { git = "https://github.com/spacejam/rust-rocksdb.git", rev = "68c13ea" }
rustc-serialize = "0.3"
byteorder = "0.5"
chrono = "0.2"

[dev-dependencies]
rayon = "0.6.0"
maplit = "0.1.3"

[dependencies.kite]
path = "../kite"
version = "0.0.3"
