[package]
name = "kite_rocksdb"
version = "0.1.0"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "RocksDB storage for Kite search engine"
license = "Apache-2.0"

[dependencies]
rocksdb = "0.6.1"
serde_json = "0.9"
roaring = "0.5.0"
byteorder = "0.5"
chrono = "0.2"

[dev-dependencies]
rayon = "0.6.0"
maplit = "0.1.3"

[dependencies.kite]
path = "../kite"
version = "0.1.0"
